--- a/app/src/main/res/layout/activity_profile_info.xml
+++ b/app/src/main/res/layout/activity_profile_info.xml
@@ -8,9 +8,9 @@
 
     <ImageView
         android:id="@+id/im_avatar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_marginTop="20dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -21,6 +21,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="15dp"
+        android:gravity="center_horizontal"
         android:textColor="@color/black"
         android:textSize="20sp"
         android:textStyle="italic"
@@ -32,9 +33,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="15dp"
+        android:gravity="center_horizontal"
         android:textColor="@color/black"
         android:textSize="20sp"
-        android:textStyle="italic"
+        android:textStyle="bold"
         app:layout_constraintTop_toBottomOf="@id/tv_user_email_address"
         tools:text="@tools:sample/full_names" />
 
